Duration visibility issue fix

--- a/ui/src/main/js/view/templates/pipeline-staged.less
+++ b/ui/src/main/js/view/templates/pipeline-staged.less
@@ -101,7 +101,7 @@
           top:0;left:0;right:0;bottom:0;
           height:auto;
           padding:.33em .33em 1.33em;
-
+          z-index: 1;
           span{
               display:inline-block;
           }
